// Vitest Snapshot v1

exports[`Toggle > should render 1`] = `
<DocumentFragment>
  <label
    class="css-xklln0"
  >
    <input
      class="css-1r71f0z toggle-input"
      type="checkbox"
    />
    <div
      class="css-7lwhds toggle-handle"
    >
      <span
        class="css-1fmiyrr"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render always on 1`] = `
<DocumentFragment>
  <label
    class="css-xklln0"
  >
    <input
      class="css-1r71f0z toggle-input"
      type="checkbox"
    />
    <div
      class="css-7lwhds toggle-handle"
    >
      <span
        class="css-1274c8s"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render disabled 1`] = `
<DocumentFragment>
  <label
    class="css-irspe1"
    disabled=""
  >
    <input
      class="css-1r71f0z toggle-input"
      disabled=""
      type="checkbox"
    />
    <div
      class="css-7lwhds toggle-handle"
    >
      <span
        class="css-2v9y9y"
        disabled=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render small 1`] = `
<DocumentFragment>
  <label
    class="css-1uxo3sa"
  >
    <input
      class="css-1r71f0z toggle-input"
      type="checkbox"
    />
    <div
      class="css-1f5xwvv toggle-handle"
    >
      <span
        class="css-1mgu28v"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should toggle checked 1`] = `
<DocumentFragment>
  <label
    class="css-xklln0"
  >
    <input
      class="css-1r71f0z toggle-input"
      type="checkbox"
    />
    <div
      class="css-7lwhds toggle-handle"
    >
      <span
        class="css-1fmiyrr"
      />
    </div>
  </label>
</DocumentFragment>
`;
